--- a/.github/ISSUE_TEMPLATE/Question.yml
+++ b/.github/ISSUE_TEMPLATE/Question.yml
@@ -1,8 +1,8 @@
 name: Q&A 질문
-about: 학습 중 궁금한 점을 묻고 답하는 공간입니다.
+description: 학습 중 궁금한 점을 묻고 답하는 공간입니다.
 title: "[질문] 질문 제목 작성"
 labels: ["Question"]
-assignees: ''
+assignees: 
 
 body:
   - type: textarea
