--- a/.github/ISSUE_TEMPLATE/Question.yml
+++ b/.github/ISSUE_TEMPLATE/Question.yml
@@ -2,7 +2,7 @@ name: Q&A 질문
 description: 학습 중 궁금한 점을 묻고 답하는 공간입니다.
 title: "[질문] 질문 제목 작성"
 labels: ["Question"]
-assignees: 
+assignees: []
 
 body:
   - type: textarea
